--- a/Music Streaming/demo/demo/src/main/resources/templates/admin/artist-database.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/admin/artist-database.html
@@ -8,6 +8,14 @@
     <h1>Artist Database</h1>
     <a th:href="@{/admin}"><button>Go back</button></a><br>
 
+
+    <div th:if="${pageMessage}">
+        <p>[[${pageMessage}]]</p>
+    </div><br>
+
+    
+    <a th:href="@{/admin/artist-database/add}"><button>Add new artist</button></a><br>
+
      <div>
         <table>
         <thead><tr>
@@ -18,6 +26,9 @@
         <tbody><th:block th:each="artist: ${artistList}"><tr>
             <td>[[${artist.id}]]</td>
             <td>[[${artist.name}]]</td>
+            <td><a th:href="@{'/admin/artist-database/edit-id-' + ${artist.id}}"><button>Edit</button></a>
+                <a th:href="@{'/admin/artist-database/delete-id-' + ${artist.id}}"><button>Delete</button></a>
+            </td>
         </th:block>
         </tbody>
         </table>
