--- a/Music Streaming/demo/demo/src/main/resources/templates/admin/genre-database.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/admin/genre-database.html
@@ -8,7 +8,21 @@
     <h1>Genre Database</h1>
     <a th:href="@{/admin}"><button>Go back</button></a><br>
 
-     <div>
+    <div th:if="${pageMessage}">
+        <p>[[${pageMessage}]]</p>
+    </div><br>
+
+    <form th:action="@{/admin/genre-database/find}" method="get">
+        <label>id:</label><input type="search" name="id" th:value="${id}">
+        <label>name:</label><input type="search" name="name" th:value="${name}">
+        <button type="submit">Find</button>
+        <a th:href="@{/admin/genre-database}"><button type="button">Reset</button></a>
+    </form><br>
+
+    <a th:href="@{/admin/genre-database/add}"><button>Add new genre</button></a><br>
+
+
+    <div>
         <table>
         <thead><tr>
             <th>ID</th>
@@ -18,6 +32,7 @@
         <tbody><th:block th:each="genre: ${genres}"><tr>
             <td>[[${genre.id}]]</td>
             <td>[[${genre.name}]]</td>
+            <td><a th:href="@{'/admin/genre-database/edit-id-' + ${genre.id}}"><button>Edit</button></a>
         </th:block>
         </tbody>
         </table>
