--- a/Music Streaming/demo/demo/src/main/resources/templates/user/account.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/user/account.html
@@ -9,16 +9,15 @@
 <body>
 
     <h1>Account</h1>
-    <p>[[${userId}]]</p>
-    <p>[[${userEmail}]]</p>
-
-
+    <p>Username: [[${userId}]]</p>
+    <p>Email: [[${userEmail}]]</p>
 
 
     <form th:action="@{/logout}" method="post">
         <input type="submit" value="Sign Out"/>
     </form>
 
+    
     <a th:href="@{/}"><button>Home</button></a>
     <a th:href="@{/search}"><button>Search</button></a>
     <a th:href="@{/library}"><button>Library</button></a>
