--- a/Music Streaming/demo/demo/src/main/resources/templates/user/search.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/user/search.html
@@ -8,12 +8,18 @@
 </head>
 <body>
 
-        <h1>Search</h1>
+    <h1>Search</h1>
 
-        <a th:href="@{/}"><button>Home</button></a>
-        <a th:href="@{/search}"><button>Search</button></a>
-        <a th:href="@{/library}"><button>Library</button></a>
-        <a th:href="@{/account}"><button>Account</button></a>
+    <form th:action="@{/search/}" method="get">
+        <input type="search" name="search" th:value="${search}">
+        <button type="submit">Search</button>
+    </form><br>
+
+
+    <a th:href="@{/}"><button>Home</button></a>
+    <a th:href="@{/search}"><button>Search</button></a>
+    <a th:href="@{/library}"><button>Library</button></a>
+    <a th:href="@{/account}"><button>Account</button></a>
 
 </body>
 </html>
