--- a/Music Streaming/demo/demo/src/main/resources/templates/admin/artist-database.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/admin/artist-database.html
@@ -13,8 +13,8 @@
     </div><br>
 
     <form th:action="@{/admin/artist-database/find}" method="get">
-        <label>id:</label><input type="search" name="id" th:value="${id}">
-        <label>name:</label><input type="search" name="name" th:value="${name}">
+        <label>artist(id):</label><input type="number" name="id" th:value="${id}">
+        <label>artist(name):</label><input type="text" name="name" th:value="${name}">
         <button type="submit">Find</button>
         <a th:href="@{/admin/artist-database}"><button type="button">Reset</button></a>
     </form><br>
