--- a/Music Streaming/demo/demo/src/main/resources/static/css/example.css
+++ b/Music Streaming/demo/demo/src/main/resources/static/css/example.css
@@ -1,7 +1,16 @@
-.center_example {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    margin-top: -50px;
-    margin-left: -100px;
+.center {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -50px;
+  margin-left: -100px;
+  }
+
+.center_v2 {
+  position: fixed;
+  text-align: center;
+  top: 50%;
+  left: 50%;
+  margin-top: -100px;
+  margin-left: -250px;
   }
