--- a/Music Streaming/demo/demo/src/main/resources/templates/error/404.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/error/404.html
@@ -10,7 +10,7 @@
     <div class="center_v2">
         <h1>404</h1>
         <h2>Page not found</h2>
-        <h3>Are you lost? come here let's daddy bring you back home ( ͠⏿ ͜ʖ ͡⏿) 👉👌</h3>
+        <h3>Are you lost? come here, let's daddy bring you back home ( ͠⏿ ͜ʖ ͡⏿) 👉👌</h3>
         <a th:href="@{/}"><button>Daddy's home</button></a>
     </div>
 </body>
