--- a/Music Streaming/demo/demo/src/main/resources/templates/user/account.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/user/account.html
@@ -9,6 +9,8 @@
 <body>
 
     <h1>Account</h1>
+
+    <h2>Account Detail</h1>
     <p>Username: [[${userId}]]</p>
     <p>Email: [[${userEmail}]]</p>
 
@@ -16,12 +18,6 @@
     <form th:action="@{/logout}" method="post">
         <input type="submit" value="Sign Out"/>
     </form>
-
     
-    <a th:href="@{/}"><button>Home</button></a>
-    <a th:href="@{/search}"><button>Search</button></a>
-    <a th:href="@{/library}"><button>Library</button></a>
-    <a th:href="@{/account}"><button>Account</button></a>
-
 </body>
 </html>
