--- a/Music Streaming/demo/demo/src/main/resources/templates/user/search.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/user/search.html
@@ -4,35 +4,11 @@
     <meta charset="UTF-8" />
     <link href="webjars/bootstrap/3.3.6/css/bootstrap.min.css"rel="stylesheet">
     <link href="css/example.css" rel="stylesheet">
-    <script src="js/example.js"></script>
+    <script src="js/search.js"></script>
 </head>
 <body>
 
     <h1>Search</h1>
-
-    <form th:action="@{/search/}" method="get">
-        <input type="search" name="search" th:value="${search}">
-        <button type="submit">Search</button>
-    </form><br>
-
-
-    <div>
-        <span th:if="${pageMessage}">
-            <p>Couldn't find "[[${pageMessage}]]"</p>
-            <p>Try searching again using a different spelling or keyword.</p>
-        </span>
-        <span th:unless="${#lists.isEmpty(music)}">
-            <p>Music</p>
-            <th:block th:each="m: ${music}">
-            <a th:href="@{'/musicPlayer_id' + ${m.id}}" target="_blank"><button>[[${m.artist.name}]] - [[${m.name}]]</button></a><br>
-            </th:block>
-        </span>
-    </div><br>
-
-    <a th:href="@{/}"><button>Home</button></a>
-    <a th:href="@{/search}"><button>Search</button></a>
-    <a th:href="@{/library}"><button>Library</button></a>
-    <a th:href="@{/account}"><button>Account</button></a>
 
 </body>
 </html>
