--- a/Music Streaming/demo/demo/src/main/resources/templates/user/search.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/user/search.html
@@ -10,5 +10,14 @@
 
     <h1>Search</h1>
 
+    <div>
+        <form>
+            <input type="text" id="searchText">
+            <button type="button" onclick="searchButton()">search</button>
+        </form>
+    </div>
+
+
+
 </body>
 </html>
