--- a/Music Streaming/demo/demo/src/main/resources/templates/index.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link href="css/index.css" rel="stylesheet">
     <script src="js/index.js"></script>
+    <script src="js/search.js"></script>
 </head>
 <body>
 
