--- a/Music Streaming/demo/demo/src/main/resources/templates/user/search.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/user/search.html
@@ -13,6 +13,9 @@
 
     <div id="result">
     </div>
+/////////////////////////////////////////////////////////////////////////////////
+    <div id="test1">
+    </div>
 
 </body>
 </html>
