--- a/Music Streaming/demo/demo/src/main/resources/templates/index.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <link href="css/index.css" rel="stylesheet">
     <script src="js/index.js"></script>
-    <script src="js/search.js"></script>
 </head>
 <body>
 
@@ -12,11 +11,9 @@
     <div id="demo">
     </div>
 
-    <audio controls>
-        <source src="assets/musics/1.wav" type="audio/ogg">
+    <audio controls id="audio">
+        <source src="" type="audio/wav">
     </audio>
-
-
 
     <div>
         <button type="button" onclick="home()">Home</button>
@@ -24,7 +21,6 @@
         <button type="button" onclick="library()">Library</button>
         <button type="button" onclick="account()">Account</button>
     </div>
-
 
 </body>
 </html>
