--- a/Music Streaming/demo/demo/src/main/resources/templates/user/home.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/user/home.html
@@ -14,9 +14,9 @@
   <div class="dropdown">
     <button class="dropbtn">Playlist#1</button>
     <div class="dropdown-content">
-        <a href="#">music 1</a>
-        <a href="#">music 2</a>
-        <a href="#">music 3</a>
+        <a onclick="playMusic(1)">music 1</a>
+        <a onclick="playMusic(2)">music 2</a>
+        <a onclick="playMusic(3)">music 3</a>
     </div>
   </div>
 
@@ -25,9 +25,9 @@
   <div class="dropdown">
     <button class="dropbtn">Playlist#1</button>
     <div class="dropdown-content">
-        <a href="#">music 1</a>
-        <a href="#">music 2</a>
-        <a href="#">music 3</a>
+        <a>music 1</a>
+        <a>music 2</a>
+        <a>music 3</a>
     </div>
   </div>
 
