--- a/Music Streaming/demo/demo/src/main/resources/templates/index.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/index.html
@@ -16,10 +16,10 @@
     </audio>
 
     <div>
-        <button type="button" onclick="home()">Home</button>
-        <button type="button" onclick="search()">Search</button>
-        <button type="button" onclick="library()">Library</button>
-        <button type="button" onclick="account()">Account</button>
+        <button type="button" onclick="homePage()">Home</button>
+        <button type="button" onclick="searchPage()">Search</button>
+        <button type="button" onclick="libraryPage()">Library</button>
+        <button type="button" onclick="accountPage()">Account</button>
     </div>
 
 </body>
