--- a/Music Streaming/demo/demo/src/main/resources/templates/user/search.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/user/search.html
@@ -11,7 +11,7 @@
         <input type="text" id="searchBox" oninput="searchResult()">
     </div>
 
-    <div id="result">
+    <div id="result" class="vertical-menu">
     </div>
 
 
