--- a/Music Streaming/demo/demo/src/main/resources/static/css/search.css
+++ b/Music Streaming/demo/demo/src/main/resources/static/css/search.css
@@ -1,8 +1,7 @@
 .vertical-menu {
     width: 250px;
     overflow:visible;
-  }
-  
+}
   .vertical-menu a {
     background-color: #eee;
     color: black;
@@ -10,7 +9,23 @@
     padding: 12px;
     text-decoration: none;
   }
-  
   .vertical-menu a:hover {
     background-color: #ccc;
+  }
+
+
+div.scrollmenu {
+    background-color: #333;
+    overflow: auto;
+    white-space: nowrap;
+}
+  div.scrollmenu a {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px;
+    text-decoration: none;
+  }
+  div.scrollmenu a:hover {
+    background-color: #777;
   }
