--- a/Music Streaming/demo/demo/src/main/resources/templates/user/search.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/user/search.html
@@ -2,6 +2,7 @@
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8" />
+    <link href="css/search.css" rel="stylesheet">
 </head>
 <body>
 
@@ -11,9 +12,8 @@
         <input type="text" id="searchBox" oninput="searchResult()">
     </div>
 
-    <div id="result" class="vertical-menu">
-    </div>
-
+    <div id="resultMusic" class="vertical-menu"></div>
+    <div id="resultAlbum" class="scrollmenu"></div>
 
     <div id="defualtResult" hidden>
         <p>Search for a song.</p>
