--- a/Music Streaming/demo/demo/src/main/resources/templates/admin/containerAlbum-database.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/admin/containerAlbum-database.html
@@ -8,6 +8,19 @@
     <h1>Album container Database</h1>
     <a th:href="@{/admin}"><button>Go back</button></a><br>
 
+    <div th:if="${pageMessage}">
+        <p>[[${pageMessage}]]</p>
+    </div><br>
+
+    <form th:action="@{/admin/containerAlbum-database/find}" method="get">
+        <label>album(id):</label><input type="number" name="album_id" th:value="${album_id}">
+        <label>music(id):</label><input type="number" name="music_id" th:value="${music_id}">
+        <button type="submit">Find</button>
+        <a th:href="@{/admin/containerAlbum-database}"><button type="button">Reset</button></a>
+    </form><br>
+
+    <a th:href="@{/admin/containerAlbum-database/add}"><button>Add new contain</button></a><br>
+
      <div>
         <table>
         <thead><tr>
@@ -18,6 +31,8 @@
         <tbody><th:block th:each="container: ${containers}"><tr>
             <td>[[${container.album.id}]] ([[${container.album.name}]])</td>
             <td>[[${container.music.id}]] ([[${container.music.name}]])</td>
+            <td><a th:href="@{'/admin/containerAlbum-database/edit-id-' + ${container.id}}"><button>Edit</button></a>
+                <a th:href="@{'/admin/containerAlbum-database/delete-id-' + ${container.id}}"><button>Delete</button></a>
         </th:block>
         </tbody>
         </table>
