--- a/Music Streaming/demo/demo/src/main/resources/templates/user/search.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/user/search.html
@@ -12,8 +12,8 @@
         <input type="text" id="searchBox" oninput="searchResult()">
     </div>
 
-    <div id="resultMusic" class="vertical-menu"></div>
-    <div id="resultAlbum" class="scrollmenu"></div>
+    <div id="searchResult">
+    </div>
 
     <div id="defualtResult" hidden>
         <p>Search for a song.</p>
