--- a/Music Streaming/demo/demo/src/main/resources/templates/user/search.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/user/search.html
@@ -12,6 +12,13 @@
         <input type="text" id="searchBox" oninput="searchResult()">
     </div>
 
+
+    <div class="dropdown" hidden>
+        <div id="myDropdown" class="dropdown-content" hidden>
+        </div>
+    </div>
+
+
     <div id="searchResult">
     </div>
 
