--- a/Music Streaming/demo/demo/src/main/resources/templates/user/library.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/user/library.html
@@ -10,5 +10,13 @@
 
         <h1>Library</h1>
 
+        <div class="dropdown" hidden>
+            <div id="myDropdown" class="dropdown-content" hidden>
+            </div>
+        </div>
+
+        <div id="favList">
+        </div>
+
 </body>
 </html>
