--- a/Music Streaming/demo/demo/src/main/resources/templates/index.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/index.html
@@ -12,10 +12,12 @@
     </div>
 
 
-    
-    <audio controls id="audio">
-        <source src="" type="audio/wav">
-    </audio>
+    <div>
+        <audio controls id="audio">
+            <source src="" type="audio/wav">
+        </audio>
+        <div id="likeButton"></div>
+    </div>
 
     <div>
         <button type="button" onclick="homePage()">Home</button>
