--- a/Music Streaming/demo/demo/src/main/resources/templates/user/search.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/user/search.html
@@ -14,7 +14,7 @@
     <h1>Search</h1>
 
     <div>
-        <input type="text" id="searchBox" oninput="searchResult()">
+        <input type="text" id="searchBox" oninput="searchResult()" autocomplete="off">
     </div>
 
     <div id="searchResult">
