--- a/Music Streaming/demo/demo/src/main/resources/static/css/index.css
+++ b/Music Streaming/demo/demo/src/main/resources/static/css/index.css
@@ -71,10 +71,15 @@ div.scrollmenu {
   
   .dropdown a:hover {background-color: #ddd;}
   
-.show {
+.show, .bgLock {
   display: block;
+  
 }
 
+.bgLock {
+  filter: blur(2px);
+  pointer-events: none;
+}
 /* ////////////////////////////////////////////////////////// */
 
 .transparent {
