--- a/Music Streaming/demo/demo/src/main/resources/templates/user/library.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/user/library.html
@@ -12,12 +12,13 @@
 
     <h1>Library</h1>
 
-    <div id="favList">
-        <button onclick="favList()" class="dropbtn">My Favorite</button>
+    <div id="bg">
+        <div id="favList">
+            <button onclick="favList()" class="dropbtn">My Favorite</button>
+        </div>
+        
+        <div id="playlist">
+        </div>
     </div>
-
-    <div id="playlist">
-    </div>
-
 </body>
 </html>
