--- a/Music Streaming/demo/demo/src/main/resources/templates/user/search.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/user/search.html
@@ -12,15 +12,17 @@
 
     <h1>Search</h1>
 
-    <div>
-        <input type="text" id="searchBox" oninput="searchResult()" autocomplete="off">
-    </div>
+    <div id="bg">
+        <div>
+            <input type="text" id="searchBox" oninput="searchResult()" autocomplete="off">
+        </div>
 
-    <div id="searchResult">
-    </div>
+        <div id="searchResult">
+        </div>
 
-    <div id="defualtResult" hidden>
-        <p>Search for a song.</p>
+        <div id="defualtResult" hidden>
+            <p>Search for a song.</p>
+        </div>
     </div>
 
 </body>
