--- a/Music Streaming/demo/demo/src/main/resources/templates/index.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/index.html
@@ -7,23 +7,28 @@
 </head>
 <body>
 
-
-    <div id="demo">
+    <div class="dropdown" hidden>
+        <div id="myDropdown" class="dropdown-content" hidden>
+        </div>
     </div>
 
+    <div id="bg">
+        <div id="demo">
+        </div>
 
-    <div>
-        <audio controls id="audio">
-            <source src="" type="audio/wav">
-        </audio>
-        <div id="likeButton"></div>
-    </div>
+        <div>
+            <audio controls id="audio">
+                <source src="" type="audio/wav">
+            </audio>
+            <div id="likeButton"></div>
+        </div>
 
-    <div>
-        <button type="button" onclick="homePage()">Home</button>
-        <button type="button" onclick="searchPage()">Search</button>
-        <button type="button" onclick="libraryPage()">Library</button>
-        <button type="button" onclick="accountPage()">Account</button>
+        <div>
+            <button type="button" onclick="homePage()">Home</button>
+            <button type="button" onclick="searchPage()">Search</button>
+            <button type="button" onclick="libraryPage()">Library</button>
+            <button type="button" onclick="accountPage()">Account</button>
+        </div>
     </div>
 
 </body>
