--- a/Music Streaming/demo/demo/src/main/resources/static/css/index.css
+++ b/Music Streaming/demo/demo/src/main/resources/static/css/index.css
@@ -2,16 +2,16 @@
     width: 250px;
     overflow:visible;
 }
-  .vertical-menu a {
-    background-color: #eee;
-    color: black;
-    display: block;
-    padding: 12px;
-    text-decoration: none;
-  }
-  .vertical-menu a:hover {
-    background-color: #ccc;
-  }
+    .vertical-menu a {
+        background-color: #eee;
+        color: black;
+        display: block;
+        padding: 12px;
+        text-decoration: none;
+    }
+    .vertical-menu a:hover {
+        background-color: #ccc;
+    }
 
 /* ////////////////////////////////////////////////////////// */
 
@@ -21,16 +21,16 @@ div.scrollmenu {
     white-space: nowrap;
     width: 250px;
 }
-  div.scrollmenu a {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 14px;
-    text-decoration: none;
-  }
-  div.scrollmenu a:hover {
-    background-color: #777;
-  }
+    div.scrollmenu a {
+        display: inline-block;
+        color: white;
+        text-align: center;
+        padding: 14px;
+        text-decoration: none;
+    }
+    div.scrollmenu a:hover {
+        background-color: #777;
+    }
 
 /* ////////////////////////////////////////////////////////// */
 
@@ -41,48 +41,53 @@ div.scrollmenu {
     font-size: 16px;
     border: none;
     cursor: pointer;
-  }
-  
-  .dropbtn:hover, .dropbtn:focus {
+}
+
+.dropbtn:hover, .dropbtn:focus {
     background-color: #2980B9;
-  }
-  
+}
+
+/* ////////////////////////////////////////////////////////// */
+
 .dropdown {
     position: relative;
     display: inline-block;
 }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    overflow: auto;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f1f1f1;
+        min-width: 160px;
+        overflow: auto;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+    }
+    .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+    .dropdown a:hover {
+        background-color: #ddd;
+    }
+
+/* ////////////////////////////////////////////////////////// */
+
+.show {
     display: block;
-  }
-  
-  .dropdown a:hover {background-color: #ddd;}
-  
-.show, .bgLock {
-  display: block;
-  
 }
 
+/* ////////////////////////////////////////////////////////// */
+
 .bgLock {
-  filter: blur(2px);
-  pointer-events: none;
+    filter: blur(2px);
+    pointer-events: none;
 }
+
 /* ////////////////////////////////////////////////////////// */
 
 .transparent {
-  opacity: 0.6;
-  pointer-events: none;
+    opacity: 0.6;
+    pointer-events: none;
 }
