--- a/Music Streaming/demo/demo/src/main/resources/static/css/index.css
+++ b/Music Streaming/demo/demo/src/main/resources/static/css/index.css
@@ -91,3 +91,7 @@ div.scrollmenu {
     opacity: 0.6;
     pointer-events: none;
 }
+
+/* ////////////////////////////////////////////////////////// */
+
+
