--- a/Music Streaming/demo/demo/src/main/resources/templates/user/library.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/user/library.html
@@ -7,6 +7,8 @@
 
     <h1>Library</h1>
 
+    <button class="openBtn" onclick="addPlaylistPop()">Add new playlist</button>
+
     <div id="favList">
         <button onclick="favList()" class="dropbtn">My Favorite</button>
     </div>
