--- a/Music Streaming/demo/demo/src/main/resources/templates/index.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/index.html
@@ -12,23 +12,31 @@
         </div>
     </div>
 
+    <div id="myOverlay" class="overlay">
+        <div class="overlay-content">
+          <form onsubmit="addPlaylist(this); return false">
+            <input type="text" placeholder="Add Playlist name..." autocomplete="off" required id="playlistName">
+            <button type="submit">ADD</button>
+          </form>
+        </div>
+    </div>
+
     <div id="bg">
         <div id="demo">
-        </div>
+    </div>
 
-        <div>
-            <audio controls id="audio">
-                <source src="" type="audio/wav">
-            </audio>
-            <div id="likeButton"></div>
-        </div>
+    <div>
+        <audio controls id="audio">
+            <source src="" type="audio/wav">
+        </audio>
+        <div id="likeButton"></div>
+    </div>
 
-        <div>
-            <button type="button" onclick="homePage()">Home</button>
-            <button type="button" onclick="searchPage()">Search</button>
-            <button type="button" onclick="libraryPage()">Library</button>
-            <button type="button" onclick="accountPage()">Account</button>
-        </div>
+    <div>
+        <button type="button" onclick="homePage()">Home</button>
+        <button type="button" onclick="searchPage()">Search</button>
+        <button type="button" onclick="libraryPage()">Library</button>
+        <button type="button" onclick="accountPage()">Account</button>
     </div>
 
 </body>
