--- a/Music Streaming/demo/demo/src/main/resources/templates/index.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/index.html
@@ -26,6 +26,8 @@
     </div>
 
     <div>
+        <div id="prevSong"></div>
+        <div id="nextSong"></div>
         <audio controls id="audio">
             <source src="" type="audio/wav">
         </audio>
