--- a/Music Streaming/demo/demo/src/main/resources/templates/index.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
 
+    <p id="songlist"></p>
+    <p id="songIndex"></p>
+
+
+
     <div class="dropdown" hidden>
         <div id="myDropdown" class="dropdown-content" hidden>
         </div>
