--- a/Music Streaming/demo/demo/src/main/resources/templates/index.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/index.html
@@ -28,6 +28,7 @@
     <div>
         <div id="prevSong"></div>
         <div id="nextSong"></div>
+        <div id="songName"></div>
         <audio controls id="audio">
             <source src="" type="audio/wav">
         </audio>
