--- a/Music Streaming/demo/demo/src/main/resources/templates/index.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/index.html
@@ -33,6 +33,7 @@
             <source src="" type="audio/wav">
         </audio>
         <div id="likeButton"></div>
+        <div id="a2pl"></div>
     </div>
 
     <div>
