--- a/Music Streaming/demo/demo/src/main/resources/templates/index.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/index.html
@@ -21,6 +21,10 @@
         </div>
     </div>
 
+    <div class="popup">
+        <span class="popuptext" id="myPopup">popup msg</span>
+    </div>
+
     <div id="bg">
         <div id="demo">
     </div>
