--- a/Music Streaming/demo/demo/src/main/resources/templates/user/search.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/user/search.html
@@ -8,7 +8,7 @@
     <h1>Search</h1>
 
     <div>
-        <input type="text" id="searchBox" oninput="searchResult()" autocomplete="off">
+        <input type="text" id="searchBox" oninput="searchResult()" autocomplete="off" placeholder="Search Here (Song, !Genre, @Artist)">
     </div>
 
     <div id="searchResult">
