--- a/Music Streaming/demo/demo/src/main/resources/templates/user/home.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/user/home.html
@@ -11,7 +11,7 @@
         <div id="recommendPlaylist">
         </div>
 
-    <h2>Genre Playlist </h2>
+    <h2>Recommend By Genre</h2>
         <div id="genrePlaylist">
         </div>
 
