--- a/Music Streaming/demo/demo/src/main/resources/templates/index.html
+++ b/Music Streaming/demo/demo/src/main/resources/templates/index.html
@@ -51,10 +51,10 @@
     </div>
 
     <div>
-        <button type="button" onclick="homePage()">Home</button>
-        <button type="button" onclick="searchPage()">Search</button>
-        <button type="button" onclick="libraryPage()">Library</button>
-        <button type="button" onclick="accountPage()">Account</button>
+        <button type="button" onclick="homePage()" id="homePageId">Home</button>
+        <button type="button" onclick="searchPage()" id="searchPageId">Search</button>
+        <button type="button" onclick="libraryPage()" id="libraryPageId">Library</button>
+        <button type="button" onclick="accountPage()" id="accountPageId">Account</button>
     </div>
 
 </body>
